<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Account.LoginOrSignup"
    android:padding="30dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/abc_vector_test"
            tools:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/logo_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:padding="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/slogan_name"
            android:textAlignment="center"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_btn"
                android:text="@string/login"
                android:transitionName="tran_login"
                android:onClick="openLogin"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_btn"
                android:text="@string/signup"
                android:transitionName="tran_signup"
                android:onClick="openSignup1"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/needhelp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="#00000000"
            android:layout_marginTop="20dp"/>



    </LinearLayout>

</ScrollView>