<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Account.CreateNewPass"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/passlock"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/newpass"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/newpassdetails"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:startIconDrawable="@drawable/ic_lock"
            android:hint="@string/enternewpass"
            app:endIconMode="password_toggle"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:startIconDrawable="@drawable/ic_lock"
            android:hint="@string/confpass"
            app:endIconMode="password_toggle"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</ScrollView>