<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Account.Signup1"
    android:padding="25dp"
    android:transitionName="tran_signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_btn_signup1"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:onClick="backSignup1"
            android:src="@drawable/ic_back"
            android:transitionName="back_btn_transition"/>

        <TextView
            android:id="@+id/title_signup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/createaccnt"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:gravity="center"
            android:transitionName="title_transition"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/entername"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_edit"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:textColor="@color/black"
                android:inputType="text"
                android:transitionName="tran_input_upper"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/username"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_user"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:textColor="@color/black"
                android:inputType="text"
                android:transitionName="trans_username"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_email"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:textColor="@color/black"
                android:inputType="textEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:inputType="textPassword"
                android:textColor="@color/black"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_password_confirm_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/confpass"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:transitionName="tran_input_lower"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_btn_signup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="nextSignupScreen"
            android:text="@string/next"
            android:background="@color/black"
            android:textColor="@color/white"
            android:transitionName="proceed_btn"/>

        <Button
            android:id="@+id/existing_account_btn_signup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existinguser"
            android:layout_marginTop="20dp"
            android:onClick="switch_to_login_form_signup1"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:transitionName="swap_form"/>


    </LinearLayout>

</ScrollView>