<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Account.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:tint="@color/black"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/reset_pass_lock"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpass"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassdetails"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/offWhite"
            app:startIconDrawable="@drawable/ic_email"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:text="@string/next"
            android:textColor="@color/white"/>

    </LinearLayout>

  </ScrollView>