<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview_signup3"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Account.Signup3"
    android:padding="25dp"
    android:transitionName="layout_transition">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_btn_signup3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="backSignup3"
            android:src="@drawable/ic_back"
            android:transitionName="back_btn_transition"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/title_signup3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/baloo"
                android:text="@string/createaccnt"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:transitionName="title_transition" />

        </RelativeLayout>

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccpDialog_showNameCode="true"
            app:ccp_showFullName="true"
            android:transitionName="tran_input_upper"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/phoneno"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_phone"
            app:endIconMode="clear_text"
            android:transitionName="tran_input_lower">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:textColor="@color/black"
                android:inputType="text"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/signup"
            android:onClick="callVerifyOTPScreen"
            android:background="@color/black"
            android:textColor="@color/white"
            android:transitionName="proceed_btn"/>

        <Button
            android:id="@+id/existing_account_btn_signup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existinguser"
            android:layout_marginTop="20dp"
            android:onClick="switch_to_login_form_signup3"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:transitionName="swap_form"/>


    </LinearLayout>

</ScrollView>